--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
       <div class="hat-background"></div>
       <div class="hat-border"></div>
       <div class="container">
-        <span class="small-logo pull-left ir">Field Fresh Foods</span>
-        <form class="pull-right" method="get" action="/">
-          <input type="search" name="search" placeholder="Looking for something?" />
-          <input type="submit" value="Search" name="submit" />
-        </form>
+        <div class="row">
+          <span class="small-logo pull-left ir">Field Fresh Foods</span>
+          <div class="span3 pull-right">
+            <form method="get" action="/">
+              <input type="search" name="search" placeholder="Looking for something?" class="clear-input" />
+              <input type="submit" value="" name="submit" class="submit round-btn btn-small" />
+            </form>
+          </div>
+        </div>
       </div>
     </div>
     <div class="jumbotron js-revealer">
@@ -42,14 +46,17 @@
   <div class="main" id="main" role="main">
     <div class="container">
       <div class="row">
-        <h2>Lorem Baconsum</h2>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </div>
+        <div class="offset1 span10">
+          <div class="carousel-wrap">
+            <div class="carousel-container">
+              <div class="slide">1</div>
+              <div class="slide">2</div>
+              <div class="slide">3</div>
+              <div class="slide">4</div>
+            </div>
+          </div>
+        </div>
+        <div class="span1"></div>
     </div>
   </div>
   <footer>
@@ -59,6 +66,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
+  <script src="js/vendor/jodo.carousel.js"></script>
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
