Added snacks section (WIP)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     </div>
   </header>
   <div class="main" id="main" role="main">
-    <div class="container">
+
+    <!-- Carousel -->
+    <section class="container">
       <div class="row">
         <div class="offset1 span10">
           <div class="carousel-wrap">
@@ -57,16 +59,236 @@
           </div>
         </div>
         <div class="span1"></div>
-    </div>
+      </div>
+    </section>
+
+    <!-- Snacks grid -->
+    <section class="container">
+      <div class="row">
+        <div class="filter-title">Filter:</div>
+        <ul class="unstyled inline filter-options">
+          <li>Fruit</li>
+          <li>Vegetables</li>
+          <li>Mixed</li>
+          <li class="active">All</li>
+        </ul>
+        <ul class="unstyled inline legend">
+          <li class="key key-vegetable">Vegetable</li>
+          <li class="key key-fruit">Fruit</li>
+          <li class="key key-mixed">Mixed</li>
+        </ul>
+      </div>
+      <div class="row snacks-grid">
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/orange-wedges.jpg" alt="Orange wedges" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>orange wedges</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/cauliflower-buds.jpg" alt="cauliflower buds" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>cauliflower buds</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/jicama-sticks.jpg" alt="jicama sticks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>jicama sticks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/cherry-tomatoes.jpg" alt="cherry tomatoes" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>cherry tomatoes</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/yellow-squash-sticks.jpg" alt="yellow squash sticks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>yellow squash sticks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/grape-tomatoes.jpg" alt="grape tomatoes" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>grape tomatoes</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/zucchini-sticks.jpg" alt="zucchini sticks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>zucchini sticks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/grapefruit-wedges.jpg" alt="grapefruit wedges" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>grapefruit wedges</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/pineapple-chunks.jpg" alt="pineapple chunks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>pineapple chunks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/red-apple-wedges.jpg" alt="red apple wedges" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>red apple wedges</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/honeydew-chunks.jpg" alt="honeydew chunks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>honeydew chunks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/red-apple-slices.jpg" alt="red apple slices" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>red apple slices</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/green-apple-slices.jpg" alt="green apple slices" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>green apple slices</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/cucumber-slices.jpg" alt="cucumber slices" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>cucumber slices</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/edamame.jpg" alt="edamame" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>edamame</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/celery-sticks.jpg" alt="celery sticks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>celery sticks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/celery-chunks.jpg" alt="celery chunks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>celery chunks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/green-apple-wedges.jpg" alt="green apple wedges" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>green apple wedges</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack fruit" data-type="fruit">
+          <img src="img/snacks/cantaloupe-chunks.jpg" alt="cantaloupe chunks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>cantaloupe chunks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/carrot-sticks.jpg" alt="carrot sticks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>carrot sticks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack mixed" data-type="mixed">
+          <img src="img/snacks/cherry-tomatoes.jpg" alt="carrot &amp; celery sticks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>carrot &amp; celery sticks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/carrot-coins.jpg" alt="carrot coins" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>carrot coins</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/broccoli-baby-carrots.jpg" alt="broccoli &amp; baby carrots" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>broccoli &amp; baby carrots</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack mixed" data-type="mixed">
+          <img src="img/snacks/baby-carrots-celery.jpg" alt="baby carrots &amp; celery" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>baby carrots &amp; celery</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack mixed" data-type="mixed">
+          <img src="img/snacks/broccoli-cauliflower.jpg" alt="broccoli &amp; cauliflower" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>broccoli &amp; cauliflower</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/broccoli-buds.jpg" alt="broccoli buds" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>broccoli buds</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <figure class="span2 snack vegetable" data-type="vegetable">
+          <img src="img/snacks/yam-sweet-potato-sticks.jpg" alt="yam sweet potato sticks" width="140" height="139" />
+          <div class="caption-wrap">
+            <figcaption>yam sweet potato sticks</figcaption>
+            <a class="download-link" href="#download">Download <strong>PDF</strong></a>
+          </div>
+        </figure>
+        <div class="span2 invisible sizer"></div>
+      </div>
+    </section>
+
   </div>
+
   <footer>
 
   </footer>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <!--[if lt IE 9]>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <![endif]-->
+  <!--[if gte IE 9]><!-->
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <!--<![endif]-->
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+
   <script src="js/plugins.js"></script>
   <script src="js/vendor/jodo.carousel.js"></script>
+  <script src="js/vendor/jquery.shuffle.js"></script>
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
